Fix following preceding signs (#481)
* * Added space between lines
* Signs are aligned by KWIC
* Added space after similar text
* Underline restored for signs' links
* Fixed gradient

* Reduced complexity

* Refactoring

* Added multiple key support
Fixed overlap in the signs

* Test fixed

* fixed test

* Refactoring

--- a/src/signs/ui/search/Signs.sass
+++ b/src/signs/ui/search/Signs.sass
@@ -46,10 +46,12 @@
 .Neo-Assyrian
   font-size: 150%
   font-family: Assurbanipal, Junicode, serif
+  padding-left: 5px
 
 .Neo-Babylonian
   font-size: 150%
   font-family: Neo-Babylonian,'Adobe Blank', Junicode, serif
+  padding-left: 5px
 
 .beginning
   background: linear-gradient(to left, grey 50%, blue 50%)
